# ncc_management

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
api/: serializers.py  tests.py  urls.py  views.py
comercial/: admin.py  models.py  tests.py
comercial/migrations/: 0001_initial.py  0002_remove_product_duration_months_product_duration.py
common/: apps.py  models.py  tests.py
crm/: admin.py  models.py  tests.py
crm/migrations/: 0001_initial.py
financial/: admin.py  models.py  tests.py
financial/migrations/: 0001_initial.py
management/: admin.py  models.py  tests.py
management/migrations/: 0001_initial.py  0002_alter_studentsgroup_students.py  0003_contract_first_lesson_on_contract_last_lesson_on_and_more.py
ncc_school_management/: admin.py  asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
templates/admin/: index.html
